--- a/src/test/resources/properties/test.properties
+++ b/src/test/resources/properties/test.properties
@@ -1,2 +1,6 @@
-baseUri=https://rickandmortyapi.com/api
-
+baseUri=https://rickandmortyapi.com
+mortyUri=/api/character/2
+postUri=/api/users
+key1=Tomato
+key2=Eat maket
+reqres=https://reqres.in/
